--- a/CSSpart.css
+++ b/CSSpart.css
@@ -2,8 +2,8 @@
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url('fonts/helveticaneue-webfont.woff2') format('woff2'),
-       url('fonts/helveticaneue-webfont.woff') format('woff');
+  src: url('helveticaneue-webfont.woff2') format('woff2'),
+       url('helveticaneue-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
