--- a/CSSpart.css
+++ b/CSSpart.css
@@ -2,16 +2,16 @@
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url('helveticaneue-webfont.woff2') format('woff2'),
-       url('helveticaneue-webfont.woff') format('woff');
+  src: url('../keithlwill.github.io/helveticaneue-webfont.woff2') format('woff2'),
+       url('../keithlwill.github.io/helveticaneue-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('fonts/roboto-webfont.woff2') format('woff2'),
-         url('fonts/roboto-webfont.woff') format('woff');
+    src: url('../keithlwill.github.io/fonts/roboto-webfont.woff2') format('woff2'),
+         url('../keithlwill.github.io/fonts/roboto-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
   }
