--- a/CSSpart.css
+++ b/CSSpart.css
@@ -392,7 +392,7 @@ li{
     margin-top: 10rem;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-    grid-gap: 2.5rem;
+    grid-gap: 2rem;
     text-align: center;
 }
 
@@ -401,7 +401,7 @@ li{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 2rem;
+    padding: 1rem;
 }
 
 .skill h1 {
@@ -458,8 +458,12 @@ li{
     -webkit-background-clip: text;
   }
 
-  .fa-envelope:hover {
+  .fa-github-square:hover{
       color: #313535;
+  }
+
+  .fa-envelope:hover {
+      color: #c4c4c4;
   }
 
 .section-heading{
@@ -725,7 +729,7 @@ input[type="submit"]:hover{
     }
     
     .skill h1 {
-        font-size: 1rem;
+        font-size: 1.5rem;
         margin: 2rem -2px 2rem 0;
     }
     
