--- a/CSSpart.css
+++ b/CSSpart.css
@@ -2,16 +2,16 @@
 
 @font-face {
   font-family: 'Helvetica Neue';
-  src: url('../keithlwill.github.io/fonts/helveticaneue-webfont.woff2') format('woff2'),
-       url('../keithlwill.github.io/fonts/helveticaneue-webfont.woff') format('woff');
+  src: url('fonts/helveticaneue-webfont.woff2') format('woff2'),
+       url('fonts/helveticaneue-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
     font-family: 'Roboto';
-    src: url('../keithlwill.github.io/fonts/roboto-webfont.woff2') format('woff2'),
-         url('../keithlwill.github.io/fonts/roboto-webfont.woff') format('woff');
+    src: url('fonts/roboto-webfont.woff2') format('woff2'),
+         url('fonts/roboto-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
   }
@@ -411,8 +411,8 @@ li{
 }
 
 .icon-container{
-    width: 8rem;
-    height: 8rem;
+    width: 6rem;
+    height: 6rem;
     border: 3px solid #2860e2;
     background-color: #000000;
     margin-bottom: 2rem;
